[tool.poetry]
name = "telebot-tldr"
version = "0.1.0"
description = ""
authors = ["Ha Phan <thanhha.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.14.1"
beautifulsoup4 = "^4.12.2"
readability-lxml = "^0.8.1"
google-cloud-aiplatform = "^1.38.1"
urllib3 = "<2.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
aiohttp = "^3.9.1"
lxml-html-clean = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
